--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sagarpal04/github.io/TravelList",
+  "homepage": "https://sagarpal04.github.io/TravelList/",
   "name": "travel-list",
   "version": "0.1.0",
   "private": true,
